test/neg/cyclic.scala
abstract class test {

  type T = List[T];
  type U <: List[U];

}
